# apertium-cat-ita

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  README  README.md  TODO  apertium-ca-it.ca-it.dix  apertium-ca-it.ca-it.t1x  apertium-ca-it.ca.dix  apertium-ca-it.it-ca.t1x  apertium-ca-it.it.dix  apertium-cat-ita.cat-ita.dix  apertium-cat-ita.cat-ita.lrx  apertium-cat-ita.cat-ita.metalrx  apertium-cat-ita.cat-ita.t1x  apertium-cat-ita.cat-ita.t2x  apertium-cat-ita.ita-cat.lrx  apertium-cat-ita.ita-cat.metalrx  apertium-cat-ita.ita-cat.t1x  apertium-cat-ita.ita-cat.t2x  cat_ita_adj.txt  cat_ita_adv.txt  cat_ita_n.txt  cat_ita_vblex.txt  configure.ac  modes.xml  pending-tests.sh  wiki-tests.sh
challenge/: roma_ita.txt  roma_ita_cat.final.txt  roma_ita_cat.initial.txt  valencia_cat.txt  valencia_cat_ita.txt
dev/: inconsistency-summary.sh  inconsistency.sh  not-common-apertium-es-it.es-it.dix  patterns-not-detected.xml  testvoc-summary.ca-it.txt  testvoc-summary.it-ca.txt  testvoc.sh
dev/testvoc/: inconsistency.sh  testvoc-summary.cat-ita.txt  testvoc-summary.ita-cat.txt  testvoc.conf  testvoc.sh
test/: cat-ita-biltrans-expected.txt  cat-ita-chunker-expected.txt  cat-ita-disamb-expected.txt  cat-ita-generator-expected.txt  cat-ita-input.txt  cat-ita-lex-expected.txt  cat-ita-morph-expected.txt  cat-ita-pending-chunker-expected.txt  cat-ita-pending-disamb-expected.txt  cat-ita-pending-generator-expected.txt  cat-ita-pending-input.txt  cat-ita-pending-lex-expected.txt  cat-ita-pending-morph-expected.txt  cat-ita-pending-postchunk-expected.txt  cat-ita-pending-postgen-expected.txt  cat-ita-pending-postgen-gold.txt  cat-ita-pending-pretransfer-expected.txt  cat-ita-postchunk-expected.txt  cat-ita-postgen-expected.txt  cat-ita-postgen-gold.txt  cat-ita-pretransfer-expected.txt  ita-cat-biltrans-expected.txt  ita-cat-disamb-expected.txt  ita-cat-generator-expected.txt  ita-cat-input.txt  ita-cat-interchunk-expected.txt  ita-cat-lex-expected.txt  ita-cat-morph-expected.txt  ita-cat-pending-biltrans-expected.txt  ita-cat-pending-disamb-expected.txt  ita-cat-pending-generator-expected.txt  ita-cat-pending-input.txt  ita-cat-pending-interchunk-expected.txt  ita-cat-pending-lex-expected.txt  ita-cat-pending-morph-expected.txt  ita-cat-pending-postchunk-expected.txt  ita-cat-pending-postgen-expected.txt  ita-cat-pending-postgen-gold.txt  ita-cat-pending-pretransfer-expected.txt  ita-cat-pending-tagger-expected.txt  (+5 more)
texts/: ara190714.ita.fin.txt  ara190714.ita.ini.txt  ara190714.txt  catwiki190714a.ita.fin.txt  catwiki190714a.ita.ini.txt  catwiki190714a.txt  catwiki190714b.ita.fin.txt  catwiki190714b.ita.ini.txt  catwiki190714b.txt  corriere190617.cat.fin.txt  corriere190617.cat.ini.txt  corriere190617.ita.txt  corriere190623.cat.fin.txt  corriere190623.cat.ini.txt  corriere190623.ita.txt  corriere190714.cat.fin.txt  corriere190714.cat.ini.txt  corriere190714.ita.txt  itawiki190616a.cat.fin.txt  itawiki190616a.cat.ini.txt  itawiki190616a.txt  itawiki190616b.cat.fin.txt  itawiki190616b.cat.ini.txt  itawiki190616b.txt  itawiki190623a.cat.fin.txt  itawiki190623a.cat.ini.txt  itawiki190623a.txt  itawiki190623b.cat.fin.txt  itawiki190623b.cat.ini.txt  itawiki190623b.txt  itawiki190714a.cat.fin.txt  itawiki190714a.cat.ini.txt  itawiki190714a.txt  itawiki190714b.cat.fin.txt  itawiki190714b.cat.ini.txt  itawiki190714b.txt  itawiki190714c.cat.fin.txt  itawiki190714c.cat.ini.txt  itawiki190714c.txt  itawiki190714d.cat.fin.txt  (+2 more)
